--- a/app/src/main/res/layout/activity_business_application_approved.xml
+++ b/app/src/main/res/layout/activity_business_application_approved.xml
@@ -98,8 +98,9 @@
                     />
                 <TextView
                     android:layout_width="wrap_content"
+                    android:id="@+id/tvMonthlyVolume"
                     android:layout_height="wrap_content"
-                    android:text="$100,000.00"
+                    android:text=""
                     android:textSize="@dimen/_12ssp"
                     android:fontFamily="@font/opensans_bold"
                     android:textColor="@color/primary_color"
@@ -120,16 +121,15 @@
                         android:textSize="@dimen/_11ssp"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/light_gray_black"
-
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="$1,000.00"
+                        android:text=""
+                        android:id="@+id/tvhighticket"
                         android:textSize="@dimen/_12ssp"
                         android:fontFamily="@font/opensans_bold"
                         android:textColor="@color/primary_color"
-
                         />
                   </LinearLayout>
             </LinearLayout>
@@ -167,7 +167,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="5%"
+                        android:id="@+id/tvreserveAMountTransaction"
+                        android:text=""
                         android:textSize="@dimen/_12ssp"
                         android:fontFamily="@font/opensans_bold"
                         android:textColor="@color/primary_color"
@@ -193,7 +194,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="30 days"
+                        android:id="@+id/tvreservePeriod"
+                        android:text=""
                         android:textSize="@dimen/_12ssp"
                         android:fontFamily="@font/opensans_bold"
                         android:textColor="@color/primary_color"
@@ -207,6 +209,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:id="@+id/cardAccept"
             app:cardBackgroundColor="@color/primary_color"
             android:layout_marginStart="@dimen/_7sdp"
             android:layout_marginEnd="@dimen/_7sdp"
@@ -226,7 +229,7 @@
         </androidx.cardview.widget.CardView>
          <TextView
                 android:layout_width="wrap_content"
-                android:id="@+id/business_approved_decline"
+                android:id="@+id/cardDeclined"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_13sdp"
@@ -236,8 +239,6 @@
                 android:text="Decline"
                 android:textSize="@dimen/_12ssp"
                 android:textColor="@color/primary_color" />
-
-
 
 
      </LinearLayout>
