--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -105,9 +105,9 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:background="@color/white"
-                                        android:clickable="false"
                                         android:fontFamily="@font/opensans_bold"
                                         android:gravity="center_vertical|end"
+                                        android:windowSoftInputMode="stateHidden"
                                         android:hint="0.00"
                                         android:inputType="numberDecimal"
                                         android:maxLength="8"
