PR Commented Changes

--- a/app/src/main/res/layout/activity_business_additional_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_required.xml
@@ -47,6 +47,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:id="@+id/imvCLose"
                         android:layout_marginTop="@dimen/_44sdp"
                         android:layout_marginBottom="@dimen/_13sdp"
                         android:src="@drawable/ic_x" />
