--- a/app/src/main/res/layout/activity_business_quick_action.xml
+++ b/app/src/main/res/layout/activity_business_quick_action.xml
@@ -211,7 +211,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_semibold"
-                android:text="Withdraw to USD"
+                android:text="@string/withdraw_tokens"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
