--- a/app/src/main/res/layout/activity_business_batch_payout_search.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_search.xml
@@ -127,7 +127,7 @@
             android:layout_marginRight="@dimen/_21sdp"
             android:layout_marginBottom="@dimen/_6sdp"
             android:fontFamily="@font/opensans_regular"
-            android:text="@string/cyn"
+            android:text="@string/cyn_under_payout"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp"
             android:visibility="gone" />
