--- a/app/src/main/res/layout/activity_pay_request_scan.xml
+++ b/app/src/main/res/layout/activity_pay_request_scan.xml
@@ -119,7 +119,8 @@
             app:layout_constraintHorizontal_bias="0.195"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.75" />
+            app:layout_constraintVertical_bias="0.75"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -130,6 +131,7 @@
             android:text="Flashlight"
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp"
+            android:layout_marginTop="@dimen/_5sdp"
             app:layout_constraintEnd_toEndOf="@+id/toglebtn"
             app:layout_constraintStart_toStartOf="@+id/toglebtn"
             app:layout_constraintTop_toBottomOf="@+id/toglebtn" />
@@ -158,6 +160,7 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp"
+            android:layout_marginTop="@dimen/_5sdp"
             app:layout_constraintEnd_toEndOf="@+id/albumIV"
             app:layout_constraintStart_toStartOf="@+id/albumIV"
             app:layout_constraintTop_toBottomOf="@+id/albumIV" />
