--- a/app/src/main/res/layout/business_batch_payout_search.xml
+++ b/app/src/main/res/layout/business_batch_payout_search.xml
@@ -33,7 +33,7 @@
                     android:layout_margin="@dimen/_6sdp"
                     android:layout_weight="1"
                     android:fontFamily="@font/opensans_bold"
-                    android:gravity="right"
+                    android:gravity="end"
                     android:text="6,435.21"
                     android:textColor="@color/active_green"
                     android:textSize="@dimen/_12ssp" />
@@ -43,7 +43,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_5sdp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_gravity="center">
 
                 <TextView
                     android:id="@+id/payoutListState"
@@ -66,7 +67,8 @@
                     android:layout_marginBottom="@dimen/_6sdp"
                     android:layout_weight="1"
                     android:fontFamily="@font/opensans_semibold"
-                    android:gravity="right"
+                    android:gravity="end"
+                    android:layout_gravity="center_horizontal"
                     android:text="06/23/2021 @ 2:20am"
                     android:textColor="@color/dark_grey"
                     android:textSize="@dimen/_12ssp" />
@@ -74,7 +76,7 @@
 
             <View
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/_1sdp"
+                android:layout_height="1dp"
                 android:layout_marginStart="@dimen/_6sdp"
                 android:layout_marginEnd="@dimen/_6sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
