--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -93,18 +93,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="fitXY"
-                            android:visibility="visible" />
+                            android:visibility="gone" />
 
                         <TextView
                             android:id="@+id/imageTextTV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
                             android:fontFamily="@font/opensans_bold"
                             android:text="VT"
-                            android:textColor="@color/primary_black"
+                            android:background="@color/blue_light"
+                            android:textColor="@color/primary_green"
                             android:textSize="@dimen/_20sdp"
-                            android:visibility="gone" />
+                            android:visibility="visible" />
                     </androidx.cardview.widget.CardView>
 
 
@@ -382,8 +383,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
-                    android:src="@color/light_gray"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/b_imageTextTV"
@@ -392,8 +392,8 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/opensans_bold"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_20sdp"
-                    android:visibility="gone" />
+                    android:textSize="@dimen/_18ssp"
+                    android:visibility="visible" />
             </androidx.cardview.widget.CardView>
             <TextView
                 android:id="@+id/b_userNameTV"
