Bug fix - Customer SAT 11/04/2022

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -324,7 +324,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_21sdp"
-                android:layout_marginBottom="@dimen/_27sdp"
+                android:layout_marginBottom="34dp"
                 app:cardBackgroundColor="@color/inactive_color"
                 app:cardCornerRadius="@dimen/_22sdp">
 
