--- a/app/src/main/res/layout/insufficient_funds_dialog.xml
+++ b/app/src/main/res/layout/insufficient_funds_dialog.xml
@@ -46,6 +46,7 @@
         android:textSize="@dimen/_12ssp" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/BuytokenDone"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_44sdp"
         android:layout_marginTop="@dimen/_14sdp"
